Display history of the validation of a tutorial

--- a/templates/tutorial/view_tutorial.html
+++ b/templates/tutorial/view_tutorial.html
@@ -86,6 +86,7 @@
                 </form>
             </li>
             {% endif %}
+            <li><a href="{% url "zds.tutorial.views.history_validation" tutorial.pk %}">Historique validation</a></li>
         </ul>
     </div>
     {% endif %}
