--- a/templates/forum/edit_post.html
+++ b/templates/forum/edit_post.html
@@ -23,6 +23,11 @@
     {% crispy form %}
 </section>
 {% endwith %}
-{% include "forum/previsualization.part.html" %}
+
+{% if form.text.value %}
+    {% with text=form.text.value %}
+        {% include "forum/previsualization.part.html" %}
+    {% endwith %}
+{% endif %}
 
 {% endblock %}
