--- a/templates/mp/answer.html
+++ b/templates/mp/answer.html
@@ -37,8 +37,10 @@
     </div>
 </div>
 
-{% if text %}
-    {% include "mp/previsualization.part.html" %}
+{% if form.text.value %}
+    {% with text=form.text.value %}
+        {% include "forum/previsualization.part.html" %}
+    {% endwith %}
 {% endif %}
 
 {% endblock %}
