--- a/templates/mp/edit_post.html
+++ b/templates/mp/edit_post.html
@@ -44,6 +44,10 @@
     </div>
 </div>
 
-{% include "forum/previsualization.part.html" %}
+{% if form.text.value %}
+    {% with text=form.text.value %}
+        {% include "forum/previsualization.part.html" %}
+    {% endwith %}
+{% endif %}
 
 {% endblock %}
