Integrate more templates

--- a/templates/article/answer.html
+++ b/templates/article/answer.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block headline %}
-    Répondre à l'article
+    <h2>Ajouter un commentaire à l'article : {{article.title}}</h2>
 {% endblock %}
 
 {% block headline-sub %}
-    {{ article.title }}
+    <h3 class="subtitle">{{ article.description }}</h3>
 {% endblock %}
 
 {% block breadcrumb %}
