--- a/templates/article/edit_reaction.html
+++ b/templates/article/edit_reaction.html
@@ -6,7 +6,11 @@
 {% endblock %}
 
 {% block headline %}
-    Éditer un message
+    <h2>Editer le commentaire de l'article : {{article.title}}</h2>
+{% endblock %}
+
+{% block headline-sub %}
+    <h3 class="subtitle">{{ article.description }}</h3>
 {% endblock %}
 
 {% block breadcrumb %}
