--- a/templates/mp/answer.html
+++ b/templates/mp/answer.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block headline %}
-    Répondre au MP
+    <h2>Répondre au MP : {{topic.title}}</h2>
 {% endblock %}
 
 {% block headline-sub %}
-    {{ topic.title }}
+    <h3 class="subtitle">{{ topic.subtitle }}</h3>
 {% endblock %}
 
 {% block breadcrumb %}
