--- a/templates/tutorial/answer.html
+++ b/templates/tutorial/answer.html
@@ -7,11 +7,11 @@
 {% endblock %}
 
 {% block headline %}
-    Répondre à l'tutorial
+    <h2>Ajouter un commentaire au Tutoriel : {{tutorial.title}}</h2>
 {% endblock %}
 
 {% block headline-sub %}
-    {{ tutorial.title }}
+    <h3 class="subtitle">{{ tutorial.description }}</h3>
 {% endblock %}
 
 {% block breadcrumb %}
