--- a/templates/mp/base.html
+++ b/templates/mp/base.html
@@ -12,6 +12,13 @@
     active
 {% endblock %}
 
+{% block content_out %}
+    <article>
+        <header>{% block headline %}{% endblock %}</header>
+        <section class="article-content content-wrapper">{% block content %}{% endblock %}</section>
+    </article>
+{% endblock %}
+
 {% block sidebar %}
 <aside class="sidebar mobile-menu-hide">
 	{% block headline-actions %}{% endblock %}
