--- a/templates/tutorial/edit_note.html
+++ b/templates/tutorial/edit_note.html
@@ -6,7 +6,11 @@
 {% endblock %}
 
 {% block headline %}
-    Éditer un message
+    <h2>Editer le commentaire du Tutoriel : {{tutorial.title}}</h2>
+{% endblock %}
+
+{% block headline-sub %}
+    <h3 class="subtitle">{{ tutorial.description }}</h3>
 {% endblock %}
 
 {% block breadcrumb %}
