--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -43,7 +43,7 @@
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
         <h3>Admin<span class="wide">istration</span></h3>
         <ul>
-            <li><a href="{{ tutorial.get_absolute_url }}">Version offline</a></li>
+            <li><a href="{{ tutorial.get_absolute_url }}" class="ico-after arrow-right blue" >Version offline</a></li>
             <li><a href="{% url "zds.tutorial.views.history_validation" tutorial.pk %}">Historique validation</a></li>
             <li><a href="{% url "zds.tutorial.views.invalid_tutorial" tutorial.pk %}">Dépublier</a>
         </ul>
