--- a/templates/article/view_online.html
+++ b/templates/article/view_online.html
@@ -45,7 +45,7 @@
         <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
             <h3>Admin<span class="wide">istration</span></h3>
             <ul>
-                <li><a href="{{ article.get_absolute_url }}">Version offline</a></li>
+                <li><a href="{{ article.get_absolute_url }}" class="ico-after arrow-right blue">Version offline</a></li>
                 <li><button type="submit" name="invalid-article">Confirmer la dépublication</button></li>
                 <li><a href="{% url "zds.article.views.history_validation" article.pk %}">Historique validation</a></li>
             </ul>
