--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -33,6 +33,10 @@
     </div>
 {% endblock %}
 
+{% block headline-sub %}
+    {{ tutorial.description }}
+{% endblock %}
+
 {% block breadcrumb %}
     <li class="current"><a href="#">{{ tutorial.title }}</a></li>
 {% endblock %}
